# HONGSTR

./: .env.example  .gitignore  AGENTS.md  Makefile  opencode.json  producer_check.txt  pyproject.toml  run_e2e_demo.py
.github/: CODEOWNERS  pull_request_template.md
config/: com.hongstr.research_loop.plist  com.hongstr.research_poller.plist
configs/: gate_thresholds.json  gate_thresholds_suggested.json  phase1_gates_v1.json  phase2_param_space_v1.json  phase3_walkforward_v1.json  protected_files.txt  semantics_version.json  strategy_pool_v1.json  windows.json
data/: BTCUSDT_1m.parquet.bak_20260219_163351  BTCUSDT_1m.parquet.bak_20260219_163903  BTCUSDT_1m.parquet.bak_20260219_164222  signals.jsonl
docs/: ARCHITECTURE.md  DECISIONS.md  KNOWN_ISSUES.md  RUNBOOK.md  audit_kline_cadence.md  brakes.md  brakes_audit.md  ci_notes.md  dashboard_canonical_state_audit.md  dispatcher_agent.md  dispatcher_smoke.md  gate_promotion_audit.md  guardrails_dedupe.md  inventory.md  kb_obsidian_lancedb.md  kb_sync.md  needs_rebase_audit.md  obsidian_lancedb.md  oos_split_audit.md  ops.md  ops_auto_pr.md  ops_data_catalog.md  ops_data_plane.md  ops_env_keys.md  ops_icloud_backup.md  ops_kline_freshness_checklist.md  ops_local.md  ops_ml_sop.md  ops_obsidian_dashboards.md  ops_obsidian_mirror.md  ops_research_loop.md  ops_research_poller.md  ops_skills_cmds.md  ops_state_refresh.md  self_heal.md  slimdown_inventory.md  slimdown_launchd_planes.md  slimdown_next_round.md  slimdown_phase3_backlog.md  slimdown_plan.md  (+3 more)
launchd/: com.hongstr.icloud_backup.plist  com.hongstr.kb_sync.plist  (+3 more)
(+744 files in other folders)
