[project]
name = "hongstr"
version = "0.1.0"
description = "HONGSTR - Phase 0"
authors = [{name = "Hong", email = "hong@example.com"}]
dependencies = [
    "requests",
    "pandas",
    "numpy",
    "pyarrow",
    "python-dotenv",
    "pydantic>=2,<3",
]
requires-python = ">=3.9"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]
